--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -20,7 +23,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
