--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "yup": "^1.5.0"
   },
   "devDependencies": {
