--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "ts-node-dev src/index.ts",
     "lint": "ts-standard",
     "start": "node build/index.js",
+    "db:migrations": "npx prisma migrate dev --name init",
+    "db:seed": "ts-node prisma/seed.ts",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
