--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
-DATABASE_URL="mysql://root:30204334@localhost:3306/sdgdam"
+PRODUCTION="true"
+DATABASE_URL2="postgresql://enyelberth:30204334@localhost:5432/sdgdam?schema=public"
+DATABASE_URL="postgresql://enyelberthpostgresql_user:d4BF8I6RffBOjydT2YdYlUkmNro1UWu3@dpg-ctno9dtumphs73c8c51g-a.oregon-postgres.render.com/enyelberthpostgresql"
 
+PAYPAL_API_CLIENT="AcGe-hA4zfAyemJFYRHcTc6NuHK6TD-QajhpotSqRjbVslXxBY1SsbeQ8s_XOwFHMxHoR77JmeKVN9nK"
+PAYPAL_API_SECRET="EIgK5wrJjnQsOXS0KxncR61DZ1JG2Q_X3LBpXaHRaHImlVKYxitg5MoDTgo3UznjQ1ntJBL5bfHk3AWN"
+PAYPAL_API="https://api-m.sandbox.paypal.com"
+SECRET="adasdasd"
+BINANCE_API_CLIENT="dasda"
+BINANCE_API_SECRET="asdasd"
+BINANCE_API="https://api.binance.com/api"
