--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,15 @@
-version: '3.3'
+version: "3.9"
 services:
   db:
-    image: mysql:5.7
+    image: postgres
     restart: always
     environment:
-      MYSQL_DATABASE: 'sdgdam'
-      # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'enyelberth'
-      # You can use whatever password you like
-      MYSQL_PASSWORD: '30204334'
-      # Password for root access
-      MYSQL_ROOT_PASSWORD: '30204334'
+      POSTGRES_USER: enyelberth
+      POSTGRES_DB: sdgdam
+      POSTGRES_PASSWORD: 30204334
     ports:
-      # <Port exposed> : < MySQL Port running inside container>
-      - '3306:3306'
-    expose:
-      # Opens port 3306 on the container
-      - '3307'
-      # Where our data will be persisted
+      - "5432:5432"
     volumes:
-      - my-db:/var/lib/mysql
-# Names our volume
+      - pgdata:/var/lib/postgresql/data
 volumes:
-  my-db:
+  pgdata:
