--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
+    "build": "tsc",
     "lint": "ts-standard",
     "start": "node build/index.js",
     "db:migrations": "npx prisma migrate dev --name init",
