Se reparar casi todos los errores
dasdas

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 PRODUCTION="true"
 DATABASE_URL2="postgresql://enyelberth:30204334@localhost:5432/sdgdam?schema=public"
-DATABASE_URL="postgresql://enyelberthpostgresql_user:d4BF8I6RffBOjydT2YdYlUkmNro1UWu3@dpg-ctno9dtumphs73c8c51g-a.oregon-postgres.render.com/enyelberthpostgresql"
+DATABASE_URL3="postgresql://enyelberthpostgresql_user:d4BF8I6RffBOjydT2YdYlUkmNro1UWu3@dpg-ctno9dtumphs73c8c51g-a.oregon-postgres.render.com/enyelberthpostgresql"
+DATABASE_URL2="postgres://postgres.orckpwjgswnmpzyziavs:jSz5KcMLgp7Abbxu@aws-0-us-east-1.pooler.supabase.com:6543/postgres?sslmode=require&supa=base-pooler.x"
+DATABASE_URL="postgres://postgres.orckpwjgswnmpzyziavs:jSz5KcMLgp7Abbxu@aws-0-us-east-1.pooler.supabase.com:5432/postgres?sslmode=require"
 
 PAYPAL_API_CLIENT="AcGe-hA4zfAyemJFYRHcTc6NuHK6TD-QajhpotSqRjbVslXxBY1SsbeQ8s_XOwFHMxHoR77JmeKVN9nK"
 PAYPAL_API_SECRET="EIgK5wrJjnQsOXS0KxncR61DZ1JG2Q_X3LBpXaHRaHImlVKYxitg5MoDTgo3UznjQ1ntJBL5bfHk3AWN"
@@ -9,3 +11,6 @@ SECRET="adasdasd"
 BINANCE_API_CLIENT="dasda"
 BINANCE_API_SECRET="asdasd"
 BINANCE_API="https://api.binance.com/api"
+
+
+POSTGRES_URL="postgres://postgres.orckpwjgswnmpzyziavs:jSz5KcMLgp7Abbxu@aws-0-us-east-1.pooler.supabase.com:6543/postgres?sslmode=require&supa=base-pooler.x"
